--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "remixicon": "^2.5.0",
     "remixicon-react": "^1.0.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
