--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "2gis-maps": "^3.7.0",
+    "2gis-maps-react": "0.0.4",
     "@2gis/mapgl": "^1.23.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -13,8 +15,6 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "2gis-maps": "^3.7.0",
-    "2gis-maps-react": "0.0.4",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
@@ -27,6 +27,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "remixicon": "^2.5.0",
